fix: change h-search from visibility hidden to display none to fix alignment on narrow screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -55,7 +55,7 @@ body {
     padding-right: 10px;
 }
 .header > .h-bar > .h-search {
-    visibility: hidden;
+    display: none;
 }
 .header > .h-bar > .h-search:focus-visible {
    
